--- a/css/main.css
+++ b/css/main.css
@@ -70,30 +70,32 @@ h2 {
 
 .rover-hero-container .rover-hero-title-container {
   margin-left: 20px;
-  width: 45%;
+  width: 40%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.rover-hero-titile-container h1{
+.rover-hero-titile-container h1 {
   font-size: 42px;
   margin: 0
 }
 
-.rover-hero-titile-container p{
+.rover-hero-title-container p {
   font-size: 28px;
+  margin: 0 0 20px;
 }
 
 .rover-button{
   background-color: #14a96d;
+  border-radius: 4px;
   width: 400px;
   height: 30px;
   margin-bottom: 15px;
 }
 
-.rover-button .btn{
+.rover-button .btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -102,6 +104,10 @@ h2 {
   color: white;
   text-align: center;
   text-decoration: none;
+}
+
+.rover-button .btn:hover {
+  background-color: #36946e;
 }
 
 .rover-cta-mobile {
@@ -113,10 +119,6 @@ h2 {
 .rover-middle-section {
   width: 100%;
   text-align: center;
-}
-
-.rover-middle-section h2{
-  
 }
 
 .rover-mobile-hero-container {
@@ -157,6 +159,7 @@ h2 {
 
 .rover-two-boxes-container .rover-cta-box .rover-cta-container .rover-cta-bottom-container {
   text-align: initial;
+  line-height: 1.5;
 
 }
 
