--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@ h2 {
   background-color: #14a96d;
   border-radius: 5px;
   height: 25px;
-  margin: 0 50px;
+  width: 100%;
 }
 
 
@@ -279,13 +279,18 @@ h2 {
   /* Hero Titile Responsive */
 
   .rover-hero-container{
-    margin: 2rem auto 2rem;
+    height: 20rem;
+    margin: 0 auto 2rem;
   }
 
   .rover-hero-container .rover-hero-title-container {
-    justify-content: flex-start;
+    justify-content: center;
     margin-left: 0.75rem;
-    width: 16rem;
+    width: 13rem;
+  }
+
+  .rover-hero-title-container p {
+    font-size: 1.25rem;
   }
 
   .rover-button {
@@ -331,13 +336,19 @@ h2 {
     margin: 0 1rem;
   }
 
+  .rover-two-boxes-container .rover-cta-box .rover-cta-container .rover-cta-header {
+    display: flex;
+    height: 3.5rem;
+    justify-content: space-evenly;
+  }
+
   .rover-middle-section .rover-two-boxes-container .rover-cta-box .rover-cta-container .rover-cta-header > img {
     height: 2rem;
     width: 2rem;
   }
 
   .rover-middle-section .rover-two-boxes-container .rover-cta-box .rover-cta-container .rover-cta-header > p {
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
 
   .rover-middle-section .rover-two-boxes-container .rover-cta-box .rover-cta-container .rover-cta-bottom-container .rover-facts > li{
@@ -400,6 +411,12 @@ h2 {
 }
 
 @media (max-width: 1250px) {
+  /* Rover Facts */
+  .rover-two-boxes-container .rover-cta-box .rover-cta-container .rover-cta-bottom-container .rover-cta {
+    margin: 0 0.7rem;
+  }
+
+  /* Rover 123 */
   .rover-123-container .rover-123-item-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
