--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,72 @@ h2 {
   text-decoration: none;
 }
 
+/* Modal Box */
+
+.modal-box-container {
+  display: none;
+  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0, 0.8);
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-box {
+  background-color: white;
+  width: 40%;
+  height: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.modal-box .modal-box-close-button {
+  margin-left: 5px;
+}
+
+.modal-box .modal-box-close-button a{
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
+}
+
+.modal-box .modal-box-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.modal-box .modal-box-content p{
+  font-size: 24px;
+}
+
+.modal-box .modal-box-content div{
+  background-color: #ff6c6c;
+  border-radius: 10px;
+  width: 25%;
+  height: 25%;
+}
+
+.modal-box .modal-box-content div > a{
+  color: white;
+  font-size: 20px;
+  text-decoration: none;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
 /* Header Container */
 
 .rover-header-container {
@@ -49,6 +115,10 @@ h2 {
 }
 
 .rover-header-right-mobile {
+  display: none;
+}
+
+.rover-header-right-mobile-menu {
   display: none;
 }
 
@@ -259,7 +329,31 @@ h2 {
     font-size: 1.5rem;
   }
 
-  /* Headeer Responsive */
+  /* Menu Responsive */
+  .rover-header-right-mobile-menu {
+    background-color: white;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: none;
+  }
+
+  .rover-header-right-mobile-menu nav {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 3;
+  }
+
+  .rover-header-right-mobile-menu nav a {
+    color: black;
+  }
+
+  /* Header Responsive */
   .rover-header-left > nav {
     display: none;
   }
