--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,12 @@ h2 {
   text-decoration: none;
 }
 
+/* Animation */
+
+.rover-hp-container .rover-header-container .rover-header-left .rover-header-image:hover {
+  animation: rotatePaws 3s;
+}
+
 /* Modal Box */
 
 .modal-box-container {
@@ -368,7 +374,16 @@ h2 {
     display: none;
   }
 
+  .show-menu {
+    animation: showmenu .25s ease-in-out;
+  }
+
+  .hide-menu {
+    animation: hidemenu .25s ease-out;
+  }
+
   .rover-header-right-mobile-menu nav {
+    /* animation: showmenu .25s ease-in-out; */
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -530,6 +545,38 @@ h2 {
     justify-content: center;
   }
 
+}
+
+/* Animation for Responsive */
+
+@keyframes showmenu {
+  0%{
+      transform: translateX(100%);
+  }
+
+  100%{
+      transform: translateX(0%);
+  }
+}
+
+@keyframes hidemenu {
+  0%{
+      transform: translateX(0%);
+  }
+
+  100%{
+      transform: translateX(100%);
+  }
+}
+
+@keyframes rotatePaws {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @media (max-width: 1250px) {
